finalizing layout of website and fixing overflow

--- a/styles.css
+++ b/styles.css
@@ -54,6 +54,12 @@ a{
     display: block;
   }
 }
+html, body {
+  margin: 0;
+  padding: 0;
+  max-width: 100%;
+  overflow-x: hidden;
+}
 p{
   padding-top: 20px;
   font-size: 22px;
@@ -63,16 +69,51 @@ p{
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin: 150px;
-  flex-wrap: wrap;
+  margin: 60px auto;
+  gap: 50px;
+  padding: 165px 70px;
+  max-width: 100%;
+  overflow: hidden;
 }
 .introdescription{
   display: flex;
   flex-direction: column;
+  align-items: flex-end;
   text-align: right;
   font-size: 64px;
   color: #5E3B63;
   font-weight: bold;
+  flex: 1 1 480px;
+  font-size:clamp(32px, 5vw, 68px);
+}
+.profile-pic {
+  width: clamp(150px, 18vw, 500px);
+  height: auto;
+  max-width: 100%;
+  flex: 0 0 auto;
+}
+.loading-bar {
+  width: clamp(300px, 40vw, 700px);
+  height: auto;
+  max-width: 100%;
+  align-self: flex-end;
+}
+@media (max-width: 768px) {
+  .intro {
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+  }
+  .introdescription {
+    align-items: center;
+    text-align: center;
+  }
+  .loading-bar {
+    width: 100%;
+  }
+  .profile-pic{
+    width: 60%
+  }
 }
 .divider{
   color: #A288A6;
@@ -91,6 +132,7 @@ h1{
 }
 .mainbody{
   display: flex;
+  width: 100%;
   text-align: center;
   justify-content: center;
   align-content: center;
@@ -99,13 +141,13 @@ h1{
   background-color: #7B5D87;
   padding: 90px;
   color: #FFFFFF;
-  width: 50%;
+  flex: 1 1 50%;
 }
 .skills{
   background-color: #5E3B63;
   padding: 90px;
   color: #FFFFFF;
-  width: 50%;
+  flex: 1 1 50%;
 }
 .skillsbody{
   display: flex;
@@ -116,10 +158,9 @@ h1{
 }
 .frontend{
   background-color: #A288A6;
-  padding: 20px 70px 20px 70px;
+  padding: 20px 70px;
   border-radius: 50px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
-  overflow: hidden;
   text-align: center;
 }
 .backend{
@@ -127,15 +168,13 @@ h1{
   border-radius: 50px;
   padding: 30px 80px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
-  overflow: hidden;
   text-align: center;
 }
 .design{
   background-color: #AE899F;
   border-radius: 50px;
-  padding: 20px 50px 20px 50px;
+  padding: 20px 50px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
-  overflow: hidden;
   text-align: center;
 }
 .smalltext{
@@ -215,4 +254,10 @@ h2{
 }
 h5{
   font-weight:normal;
+}
+@media (max-width: 768px) {
+  .about,
+  .skills {
+    flex: 1 1 100%; 
+  }
 }
